--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,27 @@
 {
-    "manifest_version": 3,
-    "name": "Chrome Time Manager",
-    "version": "1.0",
-    "description": "Track and visualize time spent on websites",
-    "background": {
+  "manifest_version": 3,
+  "name": "Chrome Time Manager",
+  "version": "1.0",
+  "description": "Track and visualize time spent on websites",
+  "background": {
       "service_worker": "src/background/index.js"
-    },
-    "action": {
+  },
+  "action": {
       "default_popup": "src/pop-up/index.html",
       "default_icon": {
-        "16": "assets/icons/icon16.png",
-        "48": "assets/icons/icon48.png",
-        "128": "assets/icons/icon128.png"
+          "16": "assets/icons/icon16.png",
+          "48": "assets/icons/icon48.png",
+          "128": "assets/icons/icon128.png"
       }
-    },
-    "permissions": ["tabs", "storage", "activeTab"],
-    "content_security_policy": {
+  },
+  "web_accessible_resources": [
+      {
+          "resources": ["dashboard/index.html"],
+          "matches": ["<all_urls>"]
+      }
+  ],
+  "permissions": ["tabs", "storage", "activeTab"],
+  "content_security_policy": {
       "extension_pages": "script-src 'self'; object-src 'self'"
-    }
   }
-  
+}
